:memo: Add documentation route GET ID tutor
