# docs/swagger.json
@@ -246,6 +246,37 @@
             }
         },
         "/tutor/{id}": {
+            "get": {
+                "description": "Recupera um tutor",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tutor"
+                ],
+                "summary": "Recupera um tutor por ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID do tutor para consulta",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Tutor"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    }
+                }
+            },
             "patch": {
                 "description": "Alterar um tutor",
                 "produces": [
